// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Unknown component Should render the Unknown component 1`] = `
<DocumentFragment>
  <a
    class="c-btn"
    href="/about"
  >
    This is an internal link button
  </a>
</DocumentFragment>
`;

exports[`Unknown component Should render the Unknown component 2`] = `
<DocumentFragment>
  <button
    class="c-btn"
    type="button"
  >
    This is a regular button
  </button>
</DocumentFragment>
`;

exports[`Unknown component Should render the Unknown component 3`] = `
<DocumentFragment>
  <a
    class="c-btn"
    href="https://atanas.info"
    rel="noopener noreferrer"
    target="_blank"
  >
    This is an external link button
  </a>
</DocumentFragment>
`;

exports[`Unknown component Should unmount the Unknown component 1`] = `<DocumentFragment />`;

exports[`Unknown component Should unmount the Unknown component 2`] = `<DocumentFragment />`;

exports[`Unknown component Should unmount the Unknown component 3`] = `<DocumentFragment />`;
